--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ],
    "metadata": {
     "collapsed": false
@@ -154,9 +154,9 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with open_pyexasol_connection(sb_config) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema_name\": sb_config.db_schema,\n",
+    "        \"schema_name\": ai_lab_config.db_schema,\n",
     "        \"table_name\": TABLE_NAME\n",
     "    })"
    ],
@@ -194,9 +194,9 @@
     "S3_ACCESS_KEY = \"\"\n",
     "S3_SECRET_KEY = \"\"\n",
     "\n",
-    "with open_pyexasol_connection(sb_config) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema\": sb_config.db_schema,\n",
+    "        \"schema\": ai_lab_config.db_schema,\n",
     "        \"access_key\": S3_ACCESS_KEY,\n",
     "        \"secret_key\": S3_SECRET_KEY,\n",
     "    })"
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"schema\": sb_config.db_schema,\n",
+    "    \"schema\": ai_lab_config.db_schema,\n",
     "    \"table\": TABLE_NAME,  \n",
     "}\n",
     "\n",
@@ -241,7 +241,7 @@
     "    CONNECTION_NAME = 'S3_CONNECTION';\n",
     "\"\"\"\n",
     "\n",
-    "with open_pyexasol_connection(sb_config) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    conn.execute(sql, query_params=params)"
    ],
    "metadata": {
@@ -268,7 +268,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "with open_pyexasol_connection(sb_config) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    data_rows = conn.execute(\"select count(*) from {schema!i}.{table!i}\", query_params=params)\n",
     "    count = next(data_rows)[0] \n",
     "    print(f\"Loaded {count} rows\")\n",
