--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_telescope.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -120,18 +120,18 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Create an Exasol connection\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "\n",
     "    # Create tables\n",
-    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.db_schema}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{ai_lab_config.db_schema}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
     "    conn.execute(query=sql)\n",
-    "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.db_schema}\".\"{test_table}\" LIKE \"{sb_config.db_schema}\".\"{train_table}\"'\n",
+    "    sql = f'CREATE OR REPLACE TABLE \"{ai_lab_config.db_schema}\".\"{test_table}\" LIKE \"{ai_lab_config.db_schema}\".\"{train_table}\"'\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "    # Import data into Exasol\n",
-    "    conn.import_from_pandas(df_train, (sb_config.db_schema, train_table))\n",
+    "    conn.import_from_pandas(df_train, (ai_lab_config.db_schema, train_table))\n",
     "    print(f\"Imported {conn.last_statement().rowcount()} rows into {train_table}.\")\n",
-    "    conn.import_from_pandas(df_test, (sb_config.db_schema, test_table))\n",
+    "    conn.import_from_pandas(df_test, (ai_lab_config.db_schema, test_table))\n",
     "    print(f\"Imported {conn.last_statement().rowcount()} rows into {test_table}.\")\n",
     "\n",
     "print(f\"Importing the data took: {stopwatch}\")"
