--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "Before starting working with any notebook in the AI-Lab one needs to connect to the configuration store providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
     "\n",
-    "## Access configuration"
+    "## Open Secure Configuration Storage"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "## Choose the database\n",
     "\n",
-    "First, we need to choose which database we will work with. The AI-Lab includes a so-called Docker-DB. This is a single-node database running in a Docker container. It's a good choice of a database for any light-weight experiment designed as a proof of concept.\n",
+    "First, we need to choose which database we will work with. The AI-Lab includes a so-called Exasol Docker-DB. This is a single-node database running in a Docker container. It's a good choice of a database for any light-weight experiment designed as a proof of concept.\n",
     "\n",
     "For more practical work one might choose a customer database with real data.\n",
     "\n",
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_db_selection_ui(sb_config))"
+    "display(get_db_selection_ui(ai_lab_config))"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_db_config_ui(sb_config))"
+    "display(get_db_config_ui(ai_lab_config))"
    ]
   },
   {
@@ -103,9 +103,9 @@
    "id": "c57ab0bf-8b56-433e-b8a8-55d8bd4ff931",
    "metadata": {},
    "source": [
-    "## Start the Docker-DB\n",
+    "## Start the Exasol Docker-DB\n",
     "\n",
-    "If we choose to use the Docker-DB we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
+    "If we choose to use the Exasol Docker-DB we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
     "\n",
     "For a customer database, this operation will take no effect."
    ]
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_start_docker_db_ui(sb_config))"
+    "display(get_start_docker_db_ui(ai_lab_config))"
    ]
   },
   {
@@ -144,8 +144,8 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.db_schema}\"'\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{ai_lab_config.db_schema}\"'\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "print(f\"Schema created in {stopwatch}\")"
