--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -101,14 +101,14 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT {{sb_config.db_schema}}.\"SME_DEPLOY_SAGEMAKER_AUTOPILOT_ENDPOINT\"(\n",
-    "    '{{sb_config.JOB_NAME}}', \n",
+    "EXECUTE SCRIPT {{ai_lab_config.db_schema}}.\"SME_DEPLOY_SAGEMAKER_AUTOPILOT_ENDPOINT\"(\n",
+    "    '{{ai_lab_config.JOB_NAME}}', \n",
     "    '{{ENDPOINT_NAME}}', \n",
-    "    '{{sb_config.db_schema}}',\n",
+    "    '{{ai_lab_config.db_schema}}',\n",
     "    '{{INSTANCE_TYPE}}',  \n",
     "    {{INSTANCE_COUNT}}, \n",
-    "    '{{sb_config.sme_aws_connection}}', \n",
-    "    '{{sb_config.aws_region}}'\n",
+    "    '{{ai_lab_config.sme_aws_connection}}', \n",
+    "    '{{ai_lab_config.aws_region}}'\n",
     ");"
    ]
   },
@@ -130,7 +130,7 @@
     "%%sql\n",
     "SELECT SCRIPT_NAME, SCRIPT_TYPE \n",
     "FROM SYS.EXA_ALL_SCRIPTS\n",
-    "WHERE SCRIPT_SCHEMA='{{sb_config.db_schema}}' AND SCRIPT_TYPE = 'UDF'"
+    "WHERE SCRIPT_SCHEMA='{{ai_lab_config.db_schema}}' AND SCRIPT_TYPE = 'UDF'"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "%%sql column_names <<\n",
     "SELECT COLUMN_NAME\n",
     "FROM SYS.EXA_ALL_COLUMNS\n",
-    "WHERE COLUMN_SCHEMA = '{{sb_config.db_schema}}' AND COLUMN_TABLE='{{TEST_TABLE_NAME}}' AND COLUMN_NAME <> UPPER('{{TARGET_COLUMN}}');"
+    "WHERE COLUMN_SCHEMA = '{{ai_lab_config.db_schema}}' AND COLUMN_TABLE='{{TEST_TABLE_NAME}}' AND COLUMN_NAME <> UPPER('{{TARGET_COLUMN}}');"
    ]
   },
   {
@@ -184,8 +184,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT \"{{sb_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(0, {{column_names}})\n",
-    "FROM \"{{sb_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
+    "SELECT \"{{ai_lab_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(0, {{column_names}})\n",
+    "FROM \"{{ai_lab_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
     "LIMIT 10"
    ]
   },
@@ -208,12 +208,12 @@
     "WITH TEST_DATA AS\n",
     "(\n",
     "    -- We take data from the test table and add the row number calling it SAMPLE_ID.\n",
-    "    SELECT ROW_NUMBER() OVER () AS SAMPLE_ID, {{column_names}}, [{{TARGET_COLUMN}}] FROM \"{{sb_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
+    "    SELECT ROW_NUMBER() OVER () AS SAMPLE_ID, {{column_names}}, [{{TARGET_COLUMN}}] FROM \"{{ai_lab_config.db_schema}}\".\"{{TEST_TABLE_NAME}}\"\n",
     ")\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    -- Make predictions. We will pass the SAMPLE_ID that sould be returned back unchanged.\n",
-    "    SELECT \"{{sb_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(SAMPLE_ID, {{column_names}})\n",
+    "    SELECT \"{{ai_lab_config.db_schema}}\".\"{{ENDPOINT_NAME}}\"(SAMPLE_ID, {{column_names}})\n",
     "    FROM TEST_DATA\n",
     ")\n",
     "-- Finally, compute the confusion matrix.\n",
@@ -242,8 +242,8 @@
     "%%sql\n",
     "EXECUTE SCRIPT SME_DELETE_SAGEMAKER_AUTOPILOT_ENDPOINT(\n",
     "    '{{ENDPOINT_NAME}}', \n",
-    "    '{{sb_config.sme_aws_connection}}', \n",
-    "    '{{sb_config.aws_region}}'\n",
+    "    '{{ai_lab_config.sme_aws_connection}}', \n",
+    "    '{{ai_lab_config.aws_region}}'\n",
     ")"
    ]
   },
