--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "%run utils/sme_init_ui.ipynb\n",
-    "display(get_sme_config_ui(sb_config))"
+    "display(get_sme_config_ui(ai_lab_config))"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "source": [
     "from exasol.sagemaker_extension_wrapper import initialize_sme_extension\n",
     "\n",
-    "initialize_sme_extension(sb_config)"
+    "initialize_sme_extension(ai_lab_config)"
    ]
   },
   {
