--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -52,10 +52,10 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "sb_config.save('JOB_NAME', 'CLS' + datetime.now().strftime('%Y%m%d%H%M%S'))\n",
+    "ai_lab_config.save('JOB_NAME', 'CLS' + datetime.now().strftime('%Y%m%d%H%M%S'))\n",
     "\n",
     "# Here is the job name we are going to use in this and the following notebooks.\n",
-    "sb_config.JOB_NAME"
+    "ai_lab_config.JOB_NAME"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "# URI of the S3 bucket\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.sme_aws_bucket}\"\n",
+    "S3_BUCKET_URI=f\"s3://{ai_lab_config.sme_aws_bucket}\"\n",
     "\n",
     "# Path in the S3 bucket where the input data will be uploaded.\n",
     "S3_OUTPUT_PATH = \"ida_dataset_path\"\n",
@@ -139,7 +139,7 @@
     "%%sql column_names <<\n",
     "SELECT COLUMN_NAME\n",
     "FROM SYS.EXA_ALL_COLUMNS\n",
-    "WHERE COLUMN_SCHEMA = '{{sb_config.db_schema}}' AND COLUMN_TABLE='{{INPUT_TABLE_NAME}}'"
+    "WHERE COLUMN_SCHEMA = '{{ai_lab_config.db_schema}}' AND COLUMN_TABLE='{{INPUT_TABLE_NAME}}'"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE VIEW {{sb_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\" AS\n",
+    "CREATE OR REPLACE VIEW {{ai_lab_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\" AS\n",
     "SELECT CAST(0 AS INT) AS SAMPLE_ID, {{column_names}} FROM {{INPUT_TABLE_NAME}}"
    ]
   },
@@ -203,15 +203,15 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT \"{{sb_config.db_schema}}\".\"SME_TRAIN_WITH_SAGEMAKER_AUTOPILOT\"(\n",
+    "EXECUTE SCRIPT \"{{ai_lab_config.db_schema}}\".\"SME_TRAIN_WITH_SAGEMAKER_AUTOPILOT\"(\n",
     "'{\n",
-    "    \"job_name\"                          : \"{{sb_config.JOB_NAME}}\",\n",
-    "    \"aws_credentials_connection_name\"   : \"{{sb_config.sme_aws_connection}}\",\n",
-    "    \"aws_region\"                        : \"{{sb_config.aws_region}}\",\n",
-    "    \"iam_sagemaker_role\"                : \"{{sb_config.sme_aws_role}}\",\n",
+    "    \"job_name\"                          : \"{{ai_lab_config.JOB_NAME}}\",\n",
+    "    \"aws_credentials_connection_name\"   : \"{{ai_lab_config.sme_aws_connection}}\",\n",
+    "    \"aws_region\"                        : \"{{ai_lab_config.aws_region}}\",\n",
+    "    \"iam_sagemaker_role\"                : \"{{ai_lab_config.sme_aws_role}}\",\n",
     "    \"s3_bucket_uri\"                     : \"{{S3_BUCKET_URI}}\",\n",
     "    \"s3_output_path\"                    : \"{{S3_OUTPUT_PATH}}\",\n",
-    "    \"input_schema_name\"                 : \"{{sb_config.db_schema}}\",\n",
+    "    \"input_schema_name\"                 : \"{{ai_lab_config.db_schema}}\",\n",
     "    \"input_table_or_view_name\"          : \"{{INPUT_VIEW_NAME}}\",\n",
     "    \"target_attribute_name\"             : \"{{TARGET_COLUMN}}\",\n",
     "    \"max_candidates\"                    : {{MAX_CANDIDATES}}\n",
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "DROP VIEW {{sb_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\""
+    "DROP VIEW {{ai_lab_config.db_schema}}.\"{{INPUT_VIEW_NAME}}\""
    ]
   },
   {
@@ -263,10 +263,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "EXECUTE SCRIPT {{sb_config.db_schema}}.\"SME_POLL_SAGEMAKER_AUTOPILOT_JOB_STATUS\"(\n",
-    "    '{{sb_config.JOB_NAME}}',\n",
-    "    '{{sb_config.sme_aws_connection}}',\n",
-    "    '{{sb_config.aws_region}}'\n",
+    "EXECUTE SCRIPT {{ai_lab_config.db_schema}}.\"SME_POLL_SAGEMAKER_AUTOPILOT_JOB_STATUS\"(\n",
+    "    '{{ai_lab_config.JOB_NAME}}',\n",
+    "    '{{ai_lab_config.sme_aws_connection}}',\n",
+    "    '{{ai_lab_config.aws_region}}'\n",
     ")"
    ]
   },
@@ -298,11 +298,11 @@
     "import os\n",
     "from sagemaker import AutoML\n",
     "\n",
-    "os.environ[\"AWS_DEFAULT_REGION\"] = sb_config.aws_region\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = sb_config.aws_access_key_id\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = sb_config.aws_secret_access_key\n",
+    "os.environ[\"AWS_DEFAULT_REGION\"] = ai_lab_config.aws_region\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = ai_lab_config.aws_access_key_id\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = ai_lab_config.aws_secret_access_key\n",
     "\n",
-    "automl = AutoML.attach(auto_ml_job_name=sb_config.JOB_NAME)\n",
+    "automl = AutoML.attach(auto_ml_job_name=ai_lab_config.JOB_NAME)\n",
     "automl.describe_auto_ml_job()"
    ]
   },
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aws_command = f'aws s3 ls s3://{sb_config.sme_aws_bucket}/{S3_OUTPUT_PATH} --recursive'\n",
+    "aws_command = f'aws s3 ls s3://{ai_lab_config.sme_aws_bucket}/{S3_OUTPUT_PATH} --recursive'\n",
     "!{aws_command}"
    ]
   },
