--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_telescope.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -54,12 +54,12 @@
     "from stopwatch import Stopwatch\n",
     "\n",
     "target_column = 'CLASS'\n",
-    "bfs_model_path = get_udf_bucket_path(sb_config) + '/telescope_tree_model.pkl'\n",
-    "params = {'schema': sb_config.db_schema, 'test_table': 'TELESCOPE_TEST', 'model_path': bfs_model_path}\n",
+    "bfs_model_path = get_udf_bucket_path(ai_lab_config) + '/telescope_tree_model.pkl'\n",
+    "params = {'schema': ai_lab_config.db_schema, 'test_table': 'TELESCOPE_TEST', 'model_path': bfs_model_path}\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    # Get the list of feature columns\n",
     "    sql = 'SELECT * FROM {schema!i}.{test_table!i} LIMIT 1'\n",
     "    df_tmp = conn.export_to_pandas(query_or_table=sql, query_params=params)\n",
@@ -97,7 +97,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Get the ground truth labels for the test set.\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    sql = f'SELECT ROWID AS [sample_id], [{target_column}] FROM {{schema!q}}.{{test_table!q}}'\n",
     "    df_true = conn.export_to_pandas(query_or_table=sql, query_params=params)\n",
     "\n",
