--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -104,8 +104,8 @@
     "/\n",
     "\"\"\")\n",
     "\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql, query_params={'schema': sb_config.db_schema})\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    conn.execute(query=sql, query_params={'schema': ai_lab_config.db_schema})\n",
     "\n",
     "print(f\"Creating prediction script took: {stopwatch}\")"
    ]
