--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/slc/script-languages.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/slc/script-languages.ipynb
@@ -673,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, that we have an updated container, we need to check if our changes were successful. For that we are going to upload the container to an Exasol Database and have a look into it. In this example, we are going to use a local Docker-DB started by `exaslct`, which uses our [integration-test-docker-environment](https://github.com/exasol/integration-test-docker-environment) in the background. \n",
+    "Now, that we have an updated container, we need to check if our changes were successful. For that we are going to upload the container to an Exasol Database and have a look into it. In this example, we are going to use a local Exasol Docker-DB started by `exaslct`, which uses our [integration-test-docker-environment](https://github.com/exasol/integration-test-docker-environment) in the background. \n",
     "\n",
     "**Note:** You could also use your own Exasol Database by changing the variables below. However, this Notebook must be able to access the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) of your Exasol Database or you need to manually upload the container. "
    ]
@@ -700,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Starting a local Docker-DB for Testing"
+    "### Starting a local Exasol Docker-DB for Testing"
    ]
   },
   {
