--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "The tutorials are organized into topics, each one in a separate directory. The links below lead to the main page of a topic, usually an introduction. From there one can follow through the tutorials on the topic or go to a particular notebook.\n",
     "\n",
-    "The configuration notebook must be visited at least once. When using the provided demo database - Docker-DB - the configuration notebook may need to be re-visited at the beginning of every session with AI-Lab to start or restart this database. \n",
+    "The configuration notebook must be visited at least once. When using the provided demo database - Exasol Docker-DB - the configuration notebook may need to be re-visited at the beginning of every session with AI-Lab to start or restart this database. \n",
     "\n",
     "Some tutorials require example data. The data can be loaded into the database using notebooks in the data loading topic. \n",
     "\n",
