--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -17,9 +17,9 @@
     "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
-    "## Set up\n",
+    "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(sb_config, MODEL_NAME)"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME)"
    ]
   },
   {
@@ -153,9 +153,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.te_bfs_connection}}',\n",
-    "        '{{sb_config.te_hf_connection}}',\n",
-    "        '{{sb_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.te_bfs_connection}}',\n",
+    "        '{{ai_lab_config.te_hf_connection}}',\n",
+    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT1}}',\n",
@@ -209,9 +209,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.te_bfs_connection}}',\n",
-    "        '{{sb_config.te_hf_connection}}',\n",
-    "        '{{sb_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.te_bfs_connection}}',\n",
+    "        '{{ai_lab_config.te_hf_connection}}',\n",
+    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT2}}',\n",
