--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -14,9 +14,9 @@
     "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "\n",
-    "## Set up\n",
+    "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "%run utils/te_init_ui.ipynb\n",
-    "display(get_te_config_ui(sb_config))"
+    "display(get_te_config_ui(ai_lab_config))"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "source": [
     "from exasol.transformers_extension_wrapper import initialize_te_extension\n",
     "\n",
-    "initialize_te_extension(sb_config)"
+    "initialize_te_extension(ai_lab_config)"
    ]
   },
   {
