--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -17,9 +17,9 @@
     "1. [Configure the AI-Lab](../main_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
-    "## Set up\n",
+    "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(sb_config, MODEL_NAME)"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME)"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "# We will be creating a new database session every time we call the model.\n",
     "# We will have to activate the language container for each of these sessions.\n",
     "# Here we will get the activation SQL command.\n",
-    "activation_sql = get_activation_sql(sb_config)"
+    "activation_sql = get_activation_sql(ai_lab_config)"
    ]
   },
   {
@@ -150,11 +150,11 @@
    "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
-    "SELECT {sb_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
+    "SELECT {ai_lab_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{sb_config.te_bfs_connection}',\n",
-    "    '{sb_config.te_hf_connection}',\n",
-    "    '{sb_config.te_models_bfs_dir}',\n",
+    "    '{ai_lab_config.te_bfs_connection}',\n",
+    "    '{ai_lab_config.te_hf_connection}',\n",
+    "    '{ai_lab_config.te_models_bfs_dir}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
@@ -162,7 +162,7 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    conn.execute(query=activation_sql)\n",
     "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
