--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -41,7 +41,7 @@
     "def get_te_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "\n",
     "    inputs = [\n",
-    "        ('Access token', widgets.Password(value=sb_config.get(CKey.huggingface_token)), CKey.huggingface_token)\n",
+    "        ('Access token', widgets.Password(value=ai_lab_config.get(CKey.huggingface_token)), CKey.huggingface_token)\n",
     "    ]\n",
     "\n",
     "    return get_generic_config_ui(conf, [inputs], ['Huggingface Access Parameters'])\n"
