--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
@@ -62,11 +62,11 @@
     "    open_btn = widgets.Button(description='Open', style=ui_look.button_style, layout=ui_look.button_layout)\n",
     "\n",
     "    def open_or_create_config_store(btn):\n",
-    "        global sb_config, sb_store_file\n",
+    "        global ai_lab_config, sb_store_file\n",
     "        sb_store_file = file_txt.value\n",
     "        try:\n",
-    "            sb_config = Secrets(Path(root_dir) / sb_store_file, password_txt.value)\n",
-    "            sb_config.connection()\n",
+    "            ai_lab_config = Secrets(Path(root_dir) / sb_store_file, password_txt.value)\n",
+    "            ai_lab_config.connection()\n",
     "        except:\n",
     "            popup_message('Failed to open the store. Please check that the password is correct')\n",
     "        else:\n",
