--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -20,12 +20,12 @@
     "from exasol.connections import open_sqlalchemy_connection\n",
     "from exasol.language_container_activation import get_activation_sql\n",
     "\n",
-    "engine = open_sqlalchemy_connection(sb_config)\n",
+    "engine = open_sqlalchemy_connection(ai_lab_config)\n",
     "\n",
     "%load_ext sql\n",
     "%sql engine\n",
-    "%sql OPEN SCHEMA {{sb_config.db_schema}}\n",
-    "%sql {{get_activation_sql(sb_config)}}"
+    "%sql OPEN SCHEMA {{ai_lab_config.db_schema}}\n",
+    "%sql {{get_activation_sql(ai_lab_config)}}"
    ]
   }
  ],
