--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -94,7 +94,7 @@
     "            ('Port', widgets.IntText(value=int(conf.get(CKey.db_port, '8888'))), CKey.db_port),\n",
     "            ('User Name', widgets.Text(value=conf.get(CKey.db_user)), CKey.db_user),\n",
     "            ('Password', widgets.Password(value=conf.get(CKey.db_password)), CKey.db_password),\n",
-    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'IDA')), CKey.db_schema),\n",
+    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'AI_LAB')), CKey.db_schema),\n",
     "            ('Encrypted Comm.', widgets.Checkbox(value=conf.get(CKey.db_encryption, 'True') == 'True', indent=False),\n",
     "                CKey.db_encryption)\n",
     "        ],\n",
@@ -131,7 +131,7 @@
     "        [\n",
     "            ('Memory Size (GiB)', widgets.IntText(value=int(conf.get(CKey.mem_size, '2'))), CKey.mem_size),\n",
     "            ('Disk Size (GiB)', widgets.IntText(value=int(conf.get(CKey.disk_size, '2'))), CKey.disk_size),\n",
-    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'IDA')), CKey.db_schema)\n",
+    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'AI_LAB')), CKey.db_schema)\n",
     "        ]\n",
     "    ]\n",
     "\n",
