--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -58,8 +58,8 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'ABALONE_TRAIN'))\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    df = conn.export_to_pandas(query_or_table=(ai_lab_config.db_schema, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
@@ -205,7 +205,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Connect to the BucketFS service\n",
-    "bucket = open_bucketfs_connection(sb_config)\n",
+    "bucket = open_bucketfs_connection(ai_lab_config)\n",
     "\n",
     "# Serialize the model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
