--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "## Setup\n",
     "\n",
-    "### Access configuration"
+    "### Open Secure Configuration Storage"
    ]
   },
   {
@@ -57,8 +57,8 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'TELESCOPE_TRAIN'))\n",
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    df = conn.export_to_pandas(query_or_table=(ai_lab_config.db_schema, 'TELESCOPE_TRAIN'))\n",
     "\n",
     "print(f\"Loading the data took: {stopwatch}\")"
    ]
@@ -151,7 +151,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Connect to the BucketFS service\n",
-    "bucket = open_bucketfs_connection(sb_config)\n",
+    "bucket = open_bucketfs_connection(ai_lab_config)\n",
     "\n",
     "# Serialize the model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
