Reducing the notebook testing [run-notebook-tests]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "%load_ext sql\n",
     "%sql engine\n",
+    "%config SqlMagic.short_errors = False\n",
     "%sql OPEN SCHEMA {{ai_lab_config.db_schema}}\n",
     "%sql {{get_activation_sql(ai_lab_config)}}"
    ]
